--- a/my-angular-app/src/app/shared/header/header.component.html
+++ b/my-angular-app/src/app/shared/header/header.component.html
@@ -12,7 +12,7 @@
     </button>
 
     <!-- Debugging: Display isLoggedIn status -->
-    <p>{{ isLoggedIn }}</p>
+    <!-- <p>{{ isLoggedIn }}</p> -->
 
     <!-- Navigation Links -->
     <div class="collapse navbar-collapse" id="navbarNav">
